暂时解决csrf问题

--- a/bdazjweb/src/main/resources/public/index.html
+++ b/bdazjweb/src/main/resources/public/index.html
@@ -98,7 +98,7 @@
 				<input type="text" placeholder="请输入密码..." name="password"/>
 			</div>
 			<div style="margin:5px 0px;">
-				记住我<input type="checkbox"  name="remember-me" value="true"/>
+				记住我<input type="checkbox"  name="remember-me" value="false"/>
 			</div>
 			<div style="margin:5px 0px;">
 				<input type="text" name="imageCode" style="width:150px;" placeholder="请输入验证码..."/>
