加入了CSRF防护后，退出登陆必须为POST请求。并携带参数。也可以加配置让可以GET请求退出

--- a/bdazjweb/src/main/resources/public/testCsrf.html
+++ b/bdazjweb/src/main/resources/public/testCsrf.html
@@ -22,18 +22,18 @@
 <script>
      function aaa() {
 // 获取 CSRF Token
-        var csrfToken = $("meta[name='_csrf']").attr("content");
+        var _tm = $("meta[name='_csrf']").attr("content");
 
-        var csrfHeader = $("meta[name='_csrf_header']").attr("content");
-         console.log(csrfToken);
-         console.log(csrfHeader);
+        var _hm = $("meta[name='_csrf_header']").attr("content");
+         console.log(_tm);
+         console.log(_hm);
 
         $.ajax({
             url: "/test/c2" ,
             type: 'POST',
             beforeSend: function(request) {
-                if(csrfToken && csrfHeader ) {
-                    request.setRequestHeader(csrfHeader, csrfToken); // 添加 CSRF Token
+                if(_tm && _hm ) {
+                    request.setRequestHeader(_hm, _tm); // 添加 CSRF Token
                 } },
             success: function(data){
                alert(data.code+",,"+data.message+",,"+data.data);
